# blasfeo-vendor

./: 3rd-party-licenses.txt  CONTRIBUTING.md  NOTICE  README.md  dependencies.repos
blasfeo-vendor/: CMakeLists.txt  README.md  package.xml
blasfeo-vendor/cmake/modules/: configure_default_target.cmake.in
blasfeo-vendor/debian/: control  postinst  postrm  rules
