<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>blasfeo</name>
  <version>0.1.3</version>
  <description>BLASFEO provides a set of basic linear algebra routines, performance-optimized for matrices that fit in cache (i.e. generally up to a couple hundred size in each dimension), as typically encountered in embedded optimization applications.</description>

  <author>Gianluca Frison</author>

  <maintainer email="niels.vanduijkeren@de.bosch.com">Niels van Duijkeren</maintainer>
  <license>BSD-2-Clause</license>
  
  <url type="repository">https://github.com/boschresearch/blasfeo-vendor</url>
  <url type="repository">https://github.com/giaf/blasfeo</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>libblas_dev</build_depend>
  <build_depend>liblapack_dev</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
